server/kubernetes/finansu.yml
kind: Namespace
apiVersion: v1
metadata:
  name: finansu
  labels:
    name: finansu
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finansu-api-deployment
  namespace: finansu
spec:
  selector:
    matchLabels:
      app: finansu-api
  replicas: 1
  template:
    metadata:
      labels:
        app: finansu-api
    spec:
      containers:
      - name: finansu-api-container
        image: nutfes/finansu-api:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 1323
---
apiVersion: v1
kind: Service
metadata:
  name: finansu-api-service
  namespace: finansu
spec:
  type: NodePort
  ports:
  - port: 1323
  selector:
    app: finansu-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finansu-view-deployment
  namespace: finansu
spec:
  selector:
    matchLabels:
      app: finansu-view
  replicas: 1
  template:
    metadata:
      labels:
        app: finansu-view
    spec:
      containers:
        - name: finansu-view-container
          image: nutfes/finansu-view:latest
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: finansu-view-service
  namespace: finansu
spec:
  type: NodePort
  ports:
    - port: 3000
  selector:
    app: finansu-view
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finansu-ingress
  namespace: finansu
  labels:
    name: finansu-ingress
spec:
  ingressClassName: "nginx"
  rules:
  - host: finansu-test.nutfes.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: finansu-view-service
            port:
              number: 3000
  - host: finansu-api-test.nutfes.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: finansu-api-service
            port:
              number: 1323
